data/derived/comb/progs/unify/prog2291.ml.out
Characters 69-70:
  let x = rand(1,3) in build(rand 1);;
                                  ^
Error: This expression has type int but an expression was expected of type
         int * int
